# speech-to-text

./: .gitignore  README.md  diarize_pyannote.py  install.sh  merge_speakers.py  pyproject.toml  requirements.txt  run_two_stage.sh  stt_logging.py  transcribe_funasr.py  two_stage_subtitle.py
