[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-to-text-funasr"
version = "0.1.0"
description = "CLI for converting long Chinese audio/video files to subtitles with FunASR Paraformer."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "funasr>=1.2.0",
  "modelscope>=1.20.0",
  "huggingface_hub>=0.23.0",
  "soundfile>=0.12.1",
]

[project.optional-dependencies]
torch = [
  "torch>=2.3.0",
  "torchaudio>=2.3.0",
]
diarization = [
  "pyannote.audio>=3.3.0",
]

[project.scripts]
funasr-subtitle = "transcribe_funasr:main"
pyannote-diarize = "diarize_pyannote:main"
merge-speakers = "merge_speakers:main"
two-stage-subtitle = "two_stage_subtitle:main"

[tool.setuptools]
py-modules = ["transcribe_funasr", "diarize_pyannote", "merge_speakers", "two_stage_subtitle", "stt_logging"]
